--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "http-errors": "^1.6.3",
     "mongoose": "^5.1.6"
   }
 }
