tests are running need to fix models in routers

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "jest": {
     "setupFiles": [
-      "<rootDir>/src/__test__/lib/test.env.js"
+      "<rootDir>/src/__test__/test.env.js"
     ]
   },
   "keywords": [],
